Closed
Bug 819242
Opened 13 years ago
Closed 13 years ago
JAWS needs old IServiceProvider::QueryService
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: surkov, Assigned: surkov)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
867 bytes,
patch
|
tbsaunde
:
review+
akeybl
:
approval-mozilla-aurora+
akeybl
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
it's regression from bug 762770 where we corrected IServiceProvider::QueryInterface implementation. JAWS uses old behavior. Let's get back it in compatibility mode.
Attachment #689576 -
Flags: review?(trev.saunders)
Comment 1•13 years ago
|
||
Comment on attachment 689576 [details] [diff] [review]
patch
in future I think I'd prefer this compatibility stuff had a max version we allow to use compatibility mode so we don't need to support it forever, and we can be sure newer versions are fixed.
Attachment #689576 -
Flags: review?(trev.saunders) → review+
Assignee | ||
Comment 2•13 years ago
|
||
(In reply to Trevor Saunders (:tbsaunde) from comment #1)
> in future I think I'd prefer this compatibility stuff had a max version we
> allow to use compatibility mode so we don't need to support it forever, and
> we can be sure newer versions are fixed.
agree, in practice it might be no smooth since we don't when they fix their bug.
Comment 3•13 years ago
|
||
(In reply to alexander :surkov from comment #0)
> Created attachment 689576 [details] [diff] [review]
> patch
>
> it's regression from bug 762770 where we corrected
> IServiceProvider::QueryInterface implementation. JAWS uses old behavior.
> Let's get back it in compatibility mode.
That's all the way back to FF 16 I think :(
How can we catch these faster?
Assignee | ||
Comment 4•13 years ago
|
||
(In reply to David Bolter [:davidb] from comment #3)
> That's all the way back to FF 16 I think :(
>
> How can we catch these faster?
I missed that when I blogged about FF 16. Tech news should be helpful. And of course we need MATS finished.
Assignee | ||
Comment 5•13 years ago
|
||
Comment 6•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment 7•13 years ago
|
||
Can you please clarify what changed that broke JAWS? I don't think we've broken in any way, but I want to make sure I haven't missed something.
Assignee | ||
Comment 8•13 years ago
|
||
here's the change: https://hg.mozilla.org/mozilla-central/diff/4a898478fe06/accessible/src/msaa/nsAccessNodeWrap.cpp. So previously you could get, say, application accessible by passing any supported guid service and IApplicationAccessible as iid. Now you need to pass IApplicationAccessible uid as guid service.
(more info http://asurkov.blogspot.ru/2012/12/iserverprovider-implementation-in.html)
Assignee | ||
Comment 9•13 years ago
|
||
Comment on attachment 689576 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 819242
User impact if declined: JAWS user experience is broken
Testing completed (on m-c, etc.): m-c
Risk to taking this patch (and alternatives if risky): no risk, getting things back that were prior to bug 819242, code is enabled under JAWS compatibility mode (non JAWS users aren't affected by the patch)
String or UUID changes made by this patch: no
Attachment #689576 -
Flags: approval-mozilla-beta?
Attachment #689576 -
Flags: approval-mozilla-aurora?
Comment 10•13 years ago
|
||
(In reply to alexander :surkov from comment #9)
> Comment on attachment 689576 [details] [diff] [review]
> patch
>
> [Approval Request Comment]
> Bug caused by (feature/regressing bug #): bug 819242
> User impact if declined: JAWS user experience is broken
> Testing completed (on m-c, etc.): m-c
> Risk to taking this patch (and alternatives if risky): no risk, getting
> things back that were prior to bug 819242, code is enabled under JAWS
> compatibility mode (non JAWS users aren't affected by the patch)
> String or UUID changes made by this patch: no
s/bug 819242/bug 762770/ right?
Assignee | ||
Comment 11•13 years ago
|
||
Yes, thank you for the catch.
Comment 12•13 years ago
|
||
Comment on attachment 689576 [details] [diff] [review]
patch
Returning to previous behavior, and it sounds like this is broken regardless.
Attachment #689576 -
Flags: approval-mozilla-beta?
Attachment #689576 -
Flags: approval-mozilla-beta+
Attachment #689576 -
Flags: approval-mozilla-aurora?
Attachment #689576 -
Flags: approval-mozilla-aurora+
Assignee | ||
Comment 13•13 years ago
|
||
(In reply to Alex Keybl [:akeybl] from comment #12)
> Comment on attachment 689576 [details] [diff] [review]
> patch
>
> Returning to previous behavior, and it sounds like this is broken regardless.
only as part of backward compatibility thing, eventually this will be removed when we stop the support of old JAWS versions.
Comment 14•13 years ago
|
||
Comment 15•13 years ago
|
||
status-b2g18:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•