Bug 819242 - JAWS needs old IServiceProvider::QueryService, r=tbsaunde